--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,6 @@ LazyData: true
 RoxygenNote: 6.1.1
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 2.1.0)
 VignetteBuilder: knitr
