--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,8 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 2.1.0),
-    covr
+    stats,
+    covr,
+    data.table,
+    DESeq2
 VignetteBuilder: knitr
